# monorepo-app

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .huskyrc  .prettierrc  Cargo.toml  docker-compose.yml  dprint.json  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.husky/: commit-msg
apps/api/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
apps/api/migrations/: 20250309031531_create-database.down.sql  20250309031531_create-database.up.sql  20250309160019_create-users-table.up.sql  20250310170122_create-credentials-table.up.sql  20250310173015_create-auth-provider-types-table.down.sql  20250310173015_create-auth-provider-types-table.up.sql  20250310173046_create-auth-provider-table.up.sql
apps/api/src/: api_state.rs  database.rs  lib.rs  main.rs  router.rs
apps/api/src/api_routes/: auth_routes.rs  root_routes.rs
apps/api/src/controllers/: auth_controller.rs  root_controller.rs
apps/api/src/core/: cors.rs
apps/api/src/entities/: auth_provider_entity.rs  credential_entity.rs  mod.rs  user_entity.rs
apps/api/src/errors/: auth_providers_errors.rs  credentials_errors.rs  mod.rs
apps/api/src/models/: auth_model.rs
apps/api/src/repositories/: auth_providers_repository.rs  credentials_repository.rs  mod.rs  users_repository.rs
apps/api/src/services/: auth_providers_service.rs  credentials_service.rs  mod.rs  users_service.rs
apps/auth/: Cargo.toml  Dockerfile  docker-compose.yml
apps/auth/migrations/: 20250309160019_create-users-table.down.sql  20250309160019_create-users-table.up.sql  20250310170122_create-credentials-table.down.sql  20250310170122_create-credentials-table.up.sql  20250310173046_create-auth-provider-table.down.sql  20250310173046_create-auth-provider-table.up.sql  20250311154608_create-auth-refresh-tokens-table.down.sql  20250311154608_create-auth-refresh-tokens-table.up.sql  20250315045028_create-otp-codes-table.down.sql  20250315045028_create-otp-codes-table.up.sql  20250318201753_create-email-logs-table.down.sql  20250318201753_create-email-logs-table.up.sql  20250325171247_email-verification-tokens-table.up.sql  20250325171247_email_verification_tokens.down.sql
apps/auth/src/: api_state.rs  database.rs  environment.rs  lib.rs  main.rs  router.rs  server.rs
apps/auth/src/api_routes/: auth_routes.rs  mod.rs  root_routes.rs  user_routes.rs
apps/auth/src/controllers/: auth_controller.rs  mod.rs  not_found_controller.rs  root_controller.rs  user_controller.rs
apps/auth/src/cookies/: auth_cookies.rs  mod.rs
apps/auth/src/core/: axum_response.rs  mod.rs
apps/auth/src/emails/: auth_emails.rs  mod.rs
apps/auth/src/entities/: auth_provider_entity.rs  auth_refresh_token_entity.rs  credential_entity.rs  email_verification_entity.rs  mod.rs  otp_code_entity.rs  user_entity.rs
apps/auth/src/errors/: auth_providers_errors.rs  auth_refresh_tokens_errors.rs  auth_service_errors.rs  axum_response_errors.rs  credentials_errors.rs  email_verifications_errors.rs  mod.rs  otp_codes_errors.rs  repository_errors.rs  users_errors.rs
apps/auth/src/logging/: tracing.rs
apps/auth/src/middlewares/: auth_middleware.rs
apps/auth/src/models/: auth_model.rs  user_model.rs
apps/auth/src/repositories/: auth_providers_repository.rs  auth_refresh_token_repository.rs  credentials_repository.rs  email_verifications_repository.rs  mod.rs  otp_codes_repository.rs  users_repository.rs
apps/auth/src/services/: auth_providers_service.rs  auth_refresh_token_service.rs  auth_service.rs  credentials_service.rs  email_verifications_service.rs  mod.rs  otp_codes_service.rs  users_service.rs
apps/auth/src/templates/: confirm_email.html  otp_code.html
apps/auth/src/utils/: hmac_token.rs  jwt.rs  mod.rs  password.rs
apps/todos/: Cargo.toml
apps/todos/src/: main.rs
apps/web/: package.json  types.d.ts
apps/web/src/: path.ts
apps/web/src/app/: globals.css  layout.tsx  template.tsx
apps/web/src/app/(private)/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(private)/(dashboard)/__components/: header-dashboard.tsx  markdown-actions.tsx
apps/web/src/app/(private)/dashboard/: page.tsx
apps/web/src/app/(public)/: page.tsx
apps/web/src/app/(public)/(auth)/: layout.tsx
apps/web/src/app/(public)/(auth)/__components/: auth-header.tsx
apps/web/src/app/(public)/(auth)/sign-in/: page.tsx
apps/web/src/app/(public)/(auth)/sign-up/: page.tsx
apps/web/src/app/(public)/(auth)/signIn/[[...signIn]]/: page.tsx
apps/web/src/app/(public)/(auth)/signUp/[[...signUp]]/: page.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/app/tests/: mockup.test.ts
apps/web/src/components/: logo.tsx  sidebar.tsx  system-providers.tsx
apps/web/src/components/actions/: delete-markdown-action.tsx  redirect-new-document.tsx  save-markdown-action.tsx  sidebar-action.tsx
apps/web/src/components/forms/: form-content.tsx  new-markdown-form.tsx  signin-form.tsx  signup-form.tsx
apps/web/src/components/inputs/: error-message-input.tsx  name-input.tsx  text-input.tsx  theme-switch.tsx  wrapper-error-message-input.tsx
apps/web/src/components/providers/: theme-provider.tsx
apps/web/src/components/sidebar/: header-sidebar.tsx  sidebar.tsx
apps/web/src/components/ui/: button.tsx  input.tsx  spinner.tsx
apps/web/src/providers/: sidebar-provider.tsx
apps/web/src/shared/helpers/: markdown-helper.ts  mock-helper.ts
apps/web/src/shared/validations/: markdown-validation.ts  signin-validation.ts  signup-validation.ts
apps/web/src/stores/: sidebar-store.ts
apps/web/tests/: mockup.test.ts
libs/log-service/: README
libs/mail-service/: Cargo.toml
libs/mail-service/src/: errors.rs  lib.rs
libs/mail-service/tests/templates/: valid_template.html
libs/network/: package.json
libs/network/src/: index.ts
libs/sample-lib/: package.json
libs/ui/: index.html  package.json  tsconfig.json  tsup.config.ts
libs/ui/src/: index.tsx  styles.css
libs/ui/src/components/: button.tsx  input.tsx  spinner.tsx  switch.tsx  text.tsx
