[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }

anyhow = "1.0.97"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }

tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

once_cell = "1.21.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
time = "0.3.37"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
sqlx-cli = { version = "0.8.3", features = ["postgres"] }
