[package]
name = "auth"
description = "Authentication service for the application"
version = "1.0.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth"

[dependencies]
mail_service = { path = "../../packages/mail-service" }
log_service = { path = "../../packages/log-service" }

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }

tera = { workspace = true }

anyhow = "1.0.97"
dotenv = "0.15.0"

sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
] }


tokio = { workspace = true, features = ["full"] }
lettre = { workspace = true, default-features = false }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

once_cell = "1.21.0"
tracing = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }

bcrypt = "0.17.0"
time = "0.3.37"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
sha2 = "0.10.8"
base64 = "0.22.1"
rand = { version = "0.9.0", features = ["os_rng"] }
rand_core = "0.9.3"
totp-rs = "5.6.0"
hmac = "0.12.1"
hex = "0.4.3"

[dev-dependencies]
sqlx-cli = { version = "0.8.3", features = ["postgres"] }
