[package]
name = "auth"
version = "1.0.0"
edition = "2024"
description = "Authentication service for the application"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth"

[dependencies]
log_service = { path = "../../libs/log-service" }
mail_service = { path = "../../libs/mail-service" }

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }

tera = { workspace = true }

anyhow = "1.0.97"
dotenv = "0.15.0"

sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }

chrono = { workspace = true }
lettre = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

once_cell = "1.21.0"
tracing = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }

base64 = "0.22.1"
bcrypt = "0.17.0"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
rand = { version = "0.9.0", features = ["os_rng"] }
rand_core = "0.9.3"
sha2 = "0.10.8"
time = "0.3.37"
totp-rs = "5.6.0"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
sqlx-cli = { version = "0.8.3", features = ["postgres"] }
