[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
log_service = { path = "../../packages/log-service" }


tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
] }
