[package]
name = "mail_service"
version = "1.0.0"
edition = "2024"
description = "The mail service is a simple wrapper around the `lettre` crate."

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
lettre = { workspace = true, default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
serde_json = "1.0.140"
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.19.0"
